# mentatlab

./: .agent-trace.txt  .env.example  .gitignore  .gitlab-ci.yml  .go-trace.txt  .pdm-python  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CLAUDE.md  ENHANCEMENTS_SUMMARY.md  FLOWS.md  Makefile  PLAN.md  README.md  ROADMAP.md  build-and-push.sh  docker-compose.dev.yml  docker-compose.yml  dump.rdb  pyproject.toml  pytest.ini  quick-start.sh  run-local-dev.sh  run-tests-local.sh  schedule_payload.json  setup.sh  streaming_test_report.json  test_streaming.py  test_streaming_comprehensive.py
.claude/: hookify.ci-monitoring.local.md  hookify.kubectl-mutations.local.md  hookify.roadmap-reminder.local.md
.loom/: 00-index.md  00-mcp-inventory.md  00-workspace-snapshot.md  10-research.md  20-product-spec.md  30-implementation-plan.md  31-m16-issue-checklist.md  40-decisions.md  50-worklog.md  60-plan-feature-robustness-2026-06-23.md  m16-visual-qa-notes.md  robustness-killtest-notes.md  tech-debt-backlog.md  tech-debt-inventory.json  tech-debt-inventory.md  tech-debt-plan.md  tech-debt-priority.md
agents/: __init__.py  test_emit_contract.py  test_input_contract.py
agents/psyche-sim/: Dockerfile  README.md  health.sh  manifest.yaml  prestart.sh  pyproject.toml
agents/psyche-sim/src/: main.py
agents/psyche-sim/ui/: remoteEntry.js
docs/: README.md  _index.md  _toc.json  agent-sdk.md  agents.md  architecture.md  beta_milestone_architecture.md  beta_milestone_summary.md  ci-cd-setup.md  developer-testing-guide.md  flows.md  github-actions-assessment.md  local-development-guide.md  local-testing-guide.md  mentatlab_roadmap_coordination_summary.md  mentatlab_roadmap_coordination_summary_completion.md  mvp-roadmap.md  orchestrator_design.md  overview.md  phase2_core_features_architecture.md  pr-d1-plan.md  roadmap-reconciliation-2026-02-12.md  roadmap-reconciliation-2026-02-14.md  roadmap-reconciliation-2026-02-15.md  roadmap-reconciliation-2026-02-16.md  roadmap-reconciliation-2026-02-17.md  roadmap-reconciliation-2026-02-19.md  roadmap-reconciliation-2026-02-20.md  roadmap-reconciliation-2026-02-25.md  roadmap-reconciliation-2026-02-26.md  roadmap-reconciliation-2026-03-01.md  roadmap-reconciliation-2026-03-02.md  roadmap-reconciliation-2026-03-03.md  roadmap-reconciliation-2026-03-04.md  roadmap-reconciliation-2026-03-05.md  roadmap-reconciliation-2026-03-06.md  roadmap-reconciliation-2026-03-07.md  roadmap-reconciliation-2026-03-08.md  ui-mission-control.md  v1.0_milestone_spec.md  (+4 more)
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py  models.py  router_agents.py  router_flows.py  streaming.py  websockets.py
services/gateway/tests/: test_routes.py
services/orchestrator/: .dockerignore  DEPRECATED.md  Dockerfile  package.json  pyproject.toml  requirements.txt  tsconfig.json
services/orchestrator/app/: execution.py  main.py  manifest_validator.py  plugin_manager.py  resources.py  runstore.py  scheduling.py  streaming.py  subprocess_driver.py  telemetry.py
services/orchestrator/app/plugins/: base.py  plugin.json.example
services/orchestrator/app/plugins/echo_plugin/: main.py  plugin.json
services/orchestrator/app/tests/: mock_scheduling.py  test_main.py  test_manifest_validation.py  test_scheduling.py
services/orchestrator/src/: server.ts  types.ts
services/orchestrator/src/__tests__/: repo.spec.ts  runs.spec.ts
services/orchestrator/src/__tests__/helpers/: sseClient.ts
services/orchestrator/src/observability/: logger.ts  metrics.ts
services/orchestrator/src/repo/: index.ts  memoryRepo.ts  redisRepo.ts
services/orchestrator/src/routes/: runs.ts
services/orchestrator/src/validation/: schemas.ts
(+696 files in other folders)
