[project]
name = "mentatlab"
version = "0.1.0"
description = "AI agent orchestration platform"
authors = [
    {name = "Cody Blevins", email = "cody@example.com"},
]
dependencies = ["pytest>=6.0", "pyyaml>=6.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
