[project]
name = "orchestrator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cody Blevins", email = "cody.r.blevins@gmail.com"},
]
dependencies = [
    "uvicorn>=0.35.0",
    "fastapi",
    "pydantic>=2.0",
    "pytest",
    "httpx",
    "kubernetes>=33.1.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "jsonschema>=4.0.0"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
